# griptape-nodes-library-standard

./: .gitignore  AGENT_SERIALIZATION.md  AGENT_WIRE_MIGRATION.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROXY_MIGRATION.md  file-saving.md  griptape_nodes_library.json  pyproject.toml
.github/workflows/: ci.yml  version-bump-minor.yml  version-bump-patch.yml  version-publish.yml  workflow-tests.yml
griptape_nodes_library/: griptape_nodes_library_advanced.py  griptape_proxy_node.py  group.py  proxy_api_key_providers.py  proxy_auth_provider_parameter.py
griptape_nodes_library/agents/: agent.py
griptape_nodes_library/assets/: __init__.py  byteplus_provider_asset_reference.py
griptape_nodes_library/audio/: audio_details.py  combine_audio.py  eleven_labs_music_generation.py  eleven_labs_sound_effect.py  eleven_labs_text_to_speech.py  load_audio.py  microphone.py  openai_audio_transcription.py  save_audio.py  transcribe_audio.py
griptape_nodes_library/convert/: agent_to_tool.py  csv_to_list_of_dicts.py  dict_to_list.py  list_to_dict_keys.py  markdown_table_to_list_of_dicts.py  to_dict.py  to_json.py  to_list.py
griptape_nodes_library/dict/: dict_has_value_for_key.py  get_dict_value.py  load_dict.py  merge_dict.py  merge_key_value_pair.py  save_dict.py
griptape_nodes_library/engine/: engine_node.py  execute_python.py  standard_subflow_node_group.py  subflow_workflow_node.py
griptape_nodes_library/execution/: base_pass_through.py  for_each_end.py  for_each_group.py  for_each_start.py  for_loop_end.py  for_loop_group.py  for_loop_start.py  reroute.py  retry_group.py
scripts/: generate_test_workflows.py
widgets/: AnnotateImage.js  AnnotateImageSimple.js  MaskAdjustmentPreview.js  _drawing.js  _geometry.js  _hotkeys.js  _icons.js  _styles.js
(+562 files in other folders)
